Update pages to output generated at acf2323

--- a/inherits.html
+++ b/inherits.html
@@ -77,6 +77,11 @@ $(function() {
 <area shape="rect" id="node1" href="classHeroFileError.html" title="HeroFileError class. " alt="" coords="5,29,104,56"/>
 </map>
 </td></tr>
+<tr><td><img src="inherit_graph_2.png" border="0" alt="" usemap="#jsonParser"/>
+<map name="jsonParser" id="jsonParser">
+<area shape="rect" id="node1" href="classjsonParser.html" title="jsonParser" alt="" coords="5,5,89,32"/>
+</map>
+</td></tr>
 </table>
 </div><!-- contents -->
 <!-- start footer part -->
