Update pages to output generated at 822e07d

--- a/inherits.html
+++ b/inherits.html
@@ -79,7 +79,7 @@ $(function() {
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" alt="" usemap="#jsonParser"/>
 <map name="jsonParser" id="jsonParser">
-<area shape="rect" id="node1" href="classjsonParser.html" title="jsonParser class " alt="" coords="5,5,89,32"/>
+<area shape="rect" id="node1" href="classjsonParser.html" title="jsonParser" alt="" coords="5,5,89,32"/>
 </map>
 </td></tr>
 </table>
