Update pages to output generated at 38bcb59

--- a/classJSON.html
+++ b/classJSON.html
@@ -302,7 +302,7 @@ template&lt;typename T &gt; </div>
   </dd>
 </dl>
 <dl class="section return"><dt>Returns</dt><dd>A map, which contain the data of a hero. </dd></dl>
-<p>We make an ifstream from the received filename. If the file is not openable we throw an error message. If the file is ok, this fuction parses this line by line.</p>
+<p>We make an ifstream from received filename. If the file not openable we throw an error message. If the file is ok, this fuction parse this line by line.</p>
 
 </div>
 </div>
@@ -338,7 +338,7 @@ template&lt;typename T &gt; </div>
   </dd>
 </dl>
 <dl class="section return"><dt>Returns</dt><dd>A map, which contain the data of a hero. </dd></dl>
-<p>This function parses the inputstream line by line.</p>
+<p>This fucntion parse the inputstream line by line.</p>
 
 </div>
 </div>
