--- a/inherits.html
+++ b/inherits.html
@@ -86,7 +86,12 @@ $(function() {
 <area shape="rect" href="classJSON_1_1ParseException.html" title=" " alt="" coords="112,5,273,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_3.png" border="0" usemap="#Monster" alt=""/>
+<tr><td><img src="inherit_graph_3.png" border="0" usemap="#Map" alt=""/>
+<map name="Map" id="Map">
+<area shape="rect" href="classMap.html" title="Map class." alt="" coords="5,5,56,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_4.png" border="0" usemap="#Monster" alt=""/>
 <map name="Monster" id="Monster">
 <area shape="rect" href="classMonster.html" title="Monster class." alt="" coords="5,5,80,32"/>
 <area shape="rect" href="classHero.html" title="Hero class." alt="" coords="128,5,181,32"/>
