Update pages to output generated at 6903fb8

--- a/structGame_1_1monster.html
+++ b/structGame_1_1monster.html
@@ -79,8 +79,9 @@ Collaboration diagram for Game::monster:</div>
 <div class="dyncontent">
 <div class="center"><img src="structGame_1_1monster__coll__graph.png" border="0" usemap="#Game_1_1monster_coll__map" alt="Collaboration graph"/></div>
 <map name="Game_1_1monster_coll__map" id="Game_1_1monster_coll__map">
-<area shape="rect" title=" " alt="" coords="5,95,128,121"/>
-<area shape="rect" href="classMonster.html" title="Monster class." alt="" coords="29,5,104,32"/>
+<area shape="rect" title=" " alt="" coords="13,184,136,211"/>
+<area shape="rect" href="classMonster.html" title="Monster class." alt="" coords="37,95,112,121"/>
+<area shape="rect" href="structMonster_1_1Damage.html" title=" " alt="" coords="5,5,144,32"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
