Update pages to output generated at 30d657f

--- a/inherits.html
+++ b/inherits.html
@@ -123,6 +123,11 @@ $(function() {
 <area shape="rect" href="structMonster_1_1Damage.html" title=" " alt="" coords="5,5,144,32"/>
 </map>
 </td></tr>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#unitData" alt=""/>
+<map name="unitData" id="unitData">
+<area shape="rect" href="structunitData.html" title=" " alt="" coords="5,5,84,32"/>
+</map>
+</td></tr>
 </table>
 </div><!-- contents -->
 <!-- start footer part -->
