--- a/inherits.html
+++ b/inherits.html
@@ -86,44 +86,49 @@ $(function() {
 <area shape="rect" href="classMap_1_1WrongIndexException.html" title=" " alt="" coords="185,275,385,301"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_2.png" border="0" usemap="#Game_1_1monster" alt=""/>
+<tr><td><img src="inherit_graph_2.png" border="0" usemap="#Game_1_1hero" alt=""/>
+<map name="Game_1_1hero" id="Game_1_1hero">
+<area shape="rect" href="structGame_1_1hero.html" title=" " alt="" coords="5,5,104,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_3.png" border="0" usemap="#Game_1_1monster" alt=""/>
 <map name="Game_1_1monster" id="Game_1_1monster">
 <area shape="rect" href="structGame_1_1monster.html" title=" " alt="" coords="5,5,128,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_3.png" border="0" usemap="#HeroFileError" alt=""/>
+<tr><td><img src="inherit_graph_4.png" border="0" usemap="#HeroFileError" alt=""/>
 <map name="HeroFileError" id="HeroFileError">
 <area shape="rect" href="classHeroFileError.html" title="HeroFileError class." alt="" coords="5,5,112,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_4.png" border="0" usemap="#JSON" alt=""/>
+<tr><td><img src="inherit_graph_5.png" border="0" usemap="#JSON" alt=""/>
 <map name="JSON" id="JSON">
 <area shape="rect" href="classJSON.html" title="JSON class." alt="" coords="5,5,60,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_5.png" border="0" usemap="#JSON_1_1ParseException" alt=""/>
+<tr><td><img src="inherit_graph_6.png" border="0" usemap="#JSON_1_1ParseException" alt=""/>
 <map name="JSON_1_1ParseException" id="JSON_1_1ParseException">
 <area shape="rect" title=" " alt="" coords="5,5,64,32"/>
 <area shape="rect" href="classJSON_1_1ParseException.html" title=" " alt="" coords="112,5,273,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_6.png" border="0" usemap="#Map" alt=""/>
+<tr><td><img src="inherit_graph_7.png" border="0" usemap="#Map" alt=""/>
 <map name="Map" id="Map">
 <area shape="rect" href="classMap.html" title="Map class." alt="" coords="5,5,56,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" usemap="#Monster" alt=""/>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#Monster" alt=""/>
 <map name="Monster" id="Monster">
 <area shape="rect" href="classMonster.html" title="Monster class." alt="" coords="5,5,80,32"/>
 <area shape="rect" href="classHero.html" title="Hero class." alt="" coords="128,5,181,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#Monster_1_1Damage" alt=""/>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#Monster_1_1Damage" alt=""/>
 <map name="Monster_1_1Damage" id="Monster_1_1Damage">
 <area shape="rect" href="structMonster_1_1Damage.html" title=" " alt="" coords="5,5,144,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" usemap="#unitData" alt=""/>
+<tr><td><img src="inherit_graph_10.png" border="0" usemap="#unitData" alt=""/>
 <map name="unitData" id="unitData">
 <area shape="rect" href="structunitData.html" title=" " alt="" coords="5,5,84,32"/>
 </map>
