--- a/inherits.html
+++ b/inherits.html
@@ -115,20 +115,26 @@ $(function() {
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#Map" alt=""/>
 <map name="Map" id="Map">
 <area shape="rect" href="classMap.html" title="Map class." alt="" coords="5,5,56,32"/>
+<area shape="rect" href="classMarkedMap.html" title="MarkedMap class." alt="" coords="104,5,203,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#Monster" alt=""/>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#MarkedMap_1_1mapElement" alt=""/>
+<map name="MarkedMap_1_1mapElement" id="MarkedMap_1_1mapElement">
+<area shape="rect" href="structMarkedMap_1_1mapElement.html" title=" " alt="" coords="5,5,195,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#Monster" alt=""/>
 <map name="Monster" id="Monster">
 <area shape="rect" href="classMonster.html" title="Monster class." alt="" coords="5,5,80,32"/>
 <area shape="rect" href="classHero.html" title="Hero class." alt="" coords="128,5,181,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" usemap="#Monster_1_1Damage" alt=""/>
+<tr><td><img src="inherit_graph_10.png" border="0" usemap="#Monster_1_1Damage" alt=""/>
 <map name="Monster_1_1Damage" id="Monster_1_1Damage">
 <area shape="rect" href="structMonster_1_1Damage.html" title=" " alt="" coords="5,5,144,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_10.png" border="0" usemap="#unitData" alt=""/>
+<tr><td><img src="inherit_graph_11.png" border="0" usemap="#unitData" alt=""/>
 <map name="unitData" id="unitData">
 <area shape="rect" href="structunitData.html" title=" " alt="" coords="5,5,84,32"/>
 </map>
