--- a/inherits.html
+++ b/inherits.html
@@ -135,7 +135,12 @@ $(function() {
 <area shape="rect" href="structMonster_1_1Damage.html" title=" " alt="" coords="5,5,144,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_11.png" border="0" usemap="#unitData" alt=""/>
+<tr><td><img src="inherit_graph_11.png" border="0" usemap="#Renderer" alt=""/>
+<map name="Renderer" id="Renderer">
+<area shape="rect" href="classRenderer.html" title="Renderer class." alt="" coords="5,5,87,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_12.png" border="0" usemap="#unitData" alt=""/>
 <map name="unitData" id="unitData">
 <area shape="rect" href="structunitData.html" title=" " alt="" coords="5,5,84,32"/>
 </map>
