--- a/classRenderer.html
+++ b/classRenderer.html
@@ -80,9 +80,10 @@ Inheritance diagram for Renderer:</div>
 <div class="dyncontent">
 <div class="center"><img src="classRenderer__inherit__graph.png" border="0" usemap="#Renderer_inherit__map" alt="Inheritance graph"/></div>
 <map name="Renderer_inherit__map" id="Renderer_inherit__map">
-<area shape="rect" title="Renderer class." alt="" coords="34,5,115,32"/>
-<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="21,80,129,107"/>
+<area shape="rect" title="Renderer class." alt="" coords="122,5,203,32"/>
+<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="109,80,217,107"/>
 <area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="5,155,144,181"/>
+<area shape="rect" href="classObserverTextRenderer.html" title="ObserverTextRenderer class." alt="" coords="169,155,335,181"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
