--- a/classTextRenderer.html
+++ b/classTextRenderer.html
@@ -81,9 +81,10 @@ Inheritance diagram for TextRenderer:</div>
 <div class="dyncontent">
 <div class="center"><img src="classTextRenderer__inherit__graph.png" border="0" usemap="#TextRenderer_inherit__map" alt="Inheritance graph"/></div>
 <map name="TextRenderer_inherit__map" id="TextRenderer_inherit__map">
-<area shape="rect" title="TextRenderer class." alt="" coords="21,80,129,107"/>
+<area shape="rect" title="TextRenderer class." alt="" coords="109,80,217,107"/>
 <area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="5,155,144,181"/>
-<area shape="rect" href="classRenderer.html" title="Renderer class." alt="" coords="34,5,115,32"/>
+<area shape="rect" href="classObserverTextRenderer.html" title="ObserverTextRenderer class." alt="" coords="169,155,335,181"/>
+<area shape="rect" href="classRenderer.html" title="Renderer class." alt="" coords="122,5,203,32"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <div class="dynheader">
