--- a/inherits.html
+++ b/inherits.html
@@ -137,9 +137,10 @@ $(function() {
 </td></tr>
 <tr><td><img src="inherit_graph_11.png" border="0" usemap="#Renderer" alt=""/>
 <map name="Renderer" id="Renderer">
-<area shape="rect" href="classRenderer.html" title="Renderer class." alt="" coords="5,5,87,32"/>
-<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="135,5,243,32"/>
-<area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="291,5,429,32"/>
+<area shape="rect" href="classRenderer.html" title="Renderer class." alt="" coords="5,31,87,57"/>
+<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="135,31,243,57"/>
+<area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="305,5,443,32"/>
+<area shape="rect" href="classObserverTextRenderer.html" title="ObserverTextRenderer class." alt="" coords="291,56,457,83"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_12.png" border="0" usemap="#unitData" alt=""/>
