--- a/classRenderer.html
+++ b/classRenderer.html
@@ -80,10 +80,12 @@ Inheritance diagram for Renderer:</div>
 <div class="dyncontent">
 <div class="center"><img src="classRenderer__inherit__graph.png" border="0" usemap="#Renderer_inherit__map" alt="Inheritance graph"/></div>
 <map name="Renderer_inherit__map" id="Renderer_inherit__map">
-<area shape="rect" title="Renderer class." alt="" coords="122,5,203,32"/>
-<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="109,80,217,107"/>
-<area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="5,155,144,181"/>
-<area shape="rect" href="classObserverTextRenderer.html" title="ObserverTextRenderer class." alt="" coords="169,155,335,181"/>
+<area shape="rect" title="Renderer class." alt="" coords="115,5,197,32"/>
+<area shape="rect" href="classSVGRenderer.html" title="SVGRenderer class." alt="" coords="37,80,145,107"/>
+<area shape="rect" href="classTextRenderer.html" title="TextRenderer class." alt="" coords="183,80,291,107"/>
+<area shape="rect" href="classHeroSVGRenderer.html" title="HeroSVGRenderer class." alt="" coords="5,155,144,181"/>
+<area shape="rect" href="classHeroTextRenderer.html" title="HeroTextRenderer class." alt="" coords="168,155,307,181"/>
+<area shape="rect" href="classObserverTextRenderer.html" title="ObserverTextRenderer class." alt="" coords="331,155,498,181"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
