Update pages to output generated at 61864f1

--- a/md_Report.html
+++ b/md_Report.html
@@ -71,17 +71,17 @@ $(function() {
 <tr class="markdownTableHead">
 <th class="markdownTableHeadNone">Név </th><th class="markdownTableHeadNone">Github azonosito </th><th class="markdownTableHeadNone">Javasolt relatív érdemjegy </th><th class="markdownTableHeadNone">Becsült óra </th><th class="markdownTableHeadNone">Indoklás  </th></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">Joós Tibor </td><td class="markdownTableBodyNone">@joostibor </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">&gt;100 </td><td class="markdownTableBodyNone">A rábízott a feladatot megoldotta, ahol tudott segített. Nehezebb feladatokat is rá lehetett bízni.  </td></tr>
+<td class="markdownTableBodyNone">Joós Tibor </td><td class="markdownTableBodyNone">@joostibor </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">&gt;100 </td><td class="markdownTableBodyNone">A rábízott a feladatot megoldotta, ahol tudott segített. Nehezebb feladatokat is rá lehetett bízni. Projekt összefogási feladatok.  </td></tr>
 <tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">Károlyi Péter </td><td class="markdownTableBodyNone">@Peti96 </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">70-80 </td><td class="markdownTableBodyNone">A rá kitűzött feladatokat megoldotta határidőre, a közös munkák során mindig jelen volt, jó tanácsokat adott.  </td></tr>
+<td class="markdownTableBodyNone">Károlyi Péter </td><td class="markdownTableBodyNone">@Peti96 </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">80-100 </td><td class="markdownTableBodyNone">A rá kitűzött feladatokat megoldotta határidőre, a közös munkák során mindig jelen volt, jó tanácsokat adott.  </td></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">Török Kristóf </td><td class="markdownTableBodyNone">@Krisiiii98 </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">70-80 </td><td class="markdownTableBodyNone">Amit kért a csapat megoldotta. Számos jó ötlete volt a fejlesztésekkel kapcsolatban. Közös kódolásoknál mindig jelen volt.  </td></tr>
+<td class="markdownTableBodyNone">Török Kristóf </td><td class="markdownTableBodyNone">@Krisiiii98 </td><td class="markdownTableBodyNone">0 </td><td class="markdownTableBodyNone">80-100 </td><td class="markdownTableBodyNone">Amit kért a csapat megoldotta. Számos jó ötlete volt a fejlesztésekkel kapcsolatban. Közös kódolásoknál mindig jelen volt.  </td></tr>
 </table>
 <h1><a class="anchor" id="autotoc_md7"></a>
 Videók</h1>
 <ul>
-<li><a href="/videos/gameplay.mp4">Gameplay</a></li>
-<li><a href="/videos/codebasedefense.mp4">CodeBaseDefense</a></li>
+<li><a href="/videos/Memory_leak_code.mp4">Gameplay</a></li>
+<li><a href="/videos/Memory_leak_code.mp4">CodeBaseDefense</a></li>
 </ul>
 <h1><a class="anchor" id="autotoc_md8"></a>
 Befejezett feladatok</h1>
@@ -211,7 +211,7 @@ Implicit megtanult dolgok</h1>
 </ul>
 <h1><a class="anchor" id="autotoc_md13"></a>
 Feedback</h1>
-<p>Előszöris úgy gondoljuk fontos megemlíteni, hogy a képzés egyik, a gyakorlatban legjobban használható tárgya volt. Jó volt találkozni a gyakorlatban is valóban használt megoldásokkal, ez sokszor hiányzik más tárgyak esetében.</p>
+<p>Először is úgy gondoljuk fontos megemlíteni, hogy a képzés egyik, a gyakorlatban legjobban használható tárgya volt. Jó volt találkozni a gyakorlatban is valóban használt megoldásokkal, ez sokszor hiányzik más tárgyak esetében.</p>
 <p>A félév talán leghasznosabb része a GitHub mélyebb megismerése volt, mivel ezt a tudás fel tudjuk használni más tárgyak esetében történő kódfejlesztéshez, hasznos jövőbeli tudás. A másik dolog, amit nagyon hasznosnak találtunk, az a Makefile volt, mivel előtte elképzelni sem tudtunk volna ilyen könnyű megoldást. Emellett hasznos tudás volt a Docker tárolók megismerése is.</p>
 <p>Az online videós megoldás szerintünk jó megoldás volt, mivel többször visszanézhető, jobban emészthető volt és akkor nézhettük meg a videókat, amikor akartuk, így nem volt az hogy fáradtság vagy bármi miatt nem tudtunk volna gondolkodni rendesen.</p>
 <h1><a class="anchor" id="autotoc_md14"></a>
